fix(api): add message reaction list endpoint
